# data_crypto_collector

./: main.py  pyproject.toml
data/: binance.py
